<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2b2b2b">

    <!--<TextView-->
        <!--android:id="@+id/tv_login_name_alert"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/px_40"-->
        <!--android:gravity="center_vertical"-->
        <!--android:textSize="@dimen/sp_16"-->
        <!--android:textColor="@color/black"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:layout_marginLeft="@dimen/px_20"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:layout_marginTop="@dimen/px_100"-->
        <!--android:text="@string/str_login_name_alert"/>-->

    <com.alen.common.widget.ClearEditText
        android:id="@+id/edt_login_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/px_40"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        android:textSize="@dimen/sp_16"
        android:hint="@string/str_login_name_alert"
        android:layout_marginLeft="@dimen/px_40"
        android:layout_marginRight="@dimen/px_40"
        android:layout_marginTop="@dimen/px_100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--<TextView-->
        <!--android:id="@+id/tv_login_pass_alert"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/px_40"-->
        <!--android:gravity="center_vertical"-->
        <!--android:textSize="@dimen/sp_16"-->
        <!--android:textColor="@color/black"-->
        <!--android:layout_marginLeft="@dimen/px_20"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:layout_marginTop="@dimen/px_40"-->
        <!--android:text="@string/str_login_pass_alert"-->
        <!--app:layout_constraintTop_toBottomOf="@id/tv_login_name_alert"/>-->

    <com.alen.common.widget.ClearEditText
        android:id="@+id/edt_login_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/px_40"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        android:textSize="@dimen/sp_16"
        android:hint="@string/str_login_pass_alert"
        android:layout_marginTop="@dimen/px_40"
        app:layout_constraintTop_toBottomOf="@id/edt_login_name"
        app:layout_constraintStart_toStartOf="@id/edt_login_name"
        app:layout_constraintEnd_toEndOf="@id/edt_login_name"
        />

    <TextView
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/px_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_corner_btn_bg"
        app:layout_constraintTop_toBottomOf="@id/edt_login_password"
        android:layout_marginLeft="@dimen/px_40"
        android:layout_marginRight="@dimen/px_40"
        android:layout_marginTop="@dimen/px_40"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:text="@string/str_login_alert"/>
</android.support.constraint.ConstraintLayout>